--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <li><a href="">Contact</a></li>
         </ul>
     </nav>
+    <main><a href="https://narcisseisaker.github.io/sass/"> Sass Practice</a>
+    </main>
 </body>
 
 </html>
